# SimpleGoX

./: .gitignore  ARCHITECTURE_AND_SECURITY.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.claude/: CLAUDE.md  settings.local.json
.github/: CONTRIBUTING.md
crates/sgx-core/: Cargo.toml
crates/sgx-core/src/: client.rs  config.rs  error.rs  lib.rs
crates/sgx-iot/: Cargo.toml
crates/sgx-iot/src/: main.rs
crates/sgx-proto/: Cargo.toml  build.rs
crates/sgx-proto/proto/: messenger.proto
crates/sgx-proto/src/: lib.rs
crates/sgx-telegram/: Cargo.toml
crates/sgx-telegram/src/: auth.rs  convert.rs  main.rs  service.rs  td.rs
crates/sgx-terminal/: Cargo.toml
crates/sgx-terminal/src/: main.rs
docs/public/: architecture.md  compatibility.md  user-guide.md
scripts/: README.md  dev-launcher.bat  setup-dev.sh
src/: App.svelte  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  telegram_commands.rs
src-tauri/tdlib-data/: db.sqlite  db.sqlite-shm  db.sqlite-wal  td.binlog
src/components/: AnimatedBackground.svelte  Avatar.svelte  ChatLayout.svelte  ChatView.svelte  ColorPicker.svelte  ConfirmDialog.svelte  ContextMenu.svelte  CreateDmDialog.svelte  CreateRoomDialog.svelte  DateSeparator.svelte  EmojiPicker.svelte  Header.svelte  IotDevice.svelte  IotPanel.svelte  JoinRoomDialog.svelte  LoginScreen.svelte  MemberItem.svelte  MessageBubble.svelte  MessageGroup.svelte  MessageInput.svelte  QuickAccess.svelte  RoomInfoPanel.svelte  RoomItem.svelte  RoomList.svelte  RoomSettingsDialog.svelte  Settings.svelte  SettingsOverlay.svelte  Sidebar.svelte  SplashScreen.svelte  TelegramAuth.svelte  TypingIndicator.svelte
src/components/settings/: AboutTab.svelte  AccountsTab.svelte  AppearanceTab.svelte  NotificationsTab.svelte  PrivacyTab.svelte  VisualColorPicker.svelte
src/components/ui/: Tooltip.svelte
src/components/wizard/: ChooseMessengersStep.svelte  MatrixSetupStep.svelte  ReadyStep.svelte  SetupWizard.svelte  TelegramSetupStep.svelte  WelcomeStep.svelte
src/js/: app.js  app.js.bak
src/lib/: stores.js  tauri.js  utils.js
src/styles/: global.css  main.css  main.css.bak
tdlib-data/: db.sqlite  db.sqlite-shm  db.sqlite-wal  td.binlog
