[workspace]
resolver = "2"
members = [
    "crates/sgx-core",
    "crates/sgx-terminal",
    "crates/sgx-iot",
    "src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/nicokimmel/SimpleGoX"
homepage = "https://simplego.dev"
authors = ["IT and More Systems"]

[workspace.dependencies]
# Matrix SDK - the heart of SimpleGoX
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "bundled-sqlite"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1"
thiserror = "2"
# CLI
clap = { version = "4", features = ["derive"] }
# Config
dirs = "6"
toml = "0.8"
