[package]
name = "app"
version = "0.1.0"
description = "SimpleGoX Desktop - Dedicated Matrix communication terminal"
authors = ["IT and More Systems"]
license = "Apache-2.0"
repository = "https://github.com/nicokimmel/SimpleGoX"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
sgx-core = { path = "../crates/sgx-core" }
sgx-proto = { path = "../crates/sgx-proto" }
tonic = "0.12"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
