[package]
name = "sgx-iot"
version = "0.1.0"
description = "SimpleGoX IoT - ESP32 Matrix gadget toolkit"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# NOTE: This crate is a placeholder for the IoT tooling.
# The actual ESP32 firmware will be C-based (MatrixClientLibrary).
# This crate provides companion tools (provisioning, testing, monitoring).

[[bin]]
name = "sgx-iot"
path = "src/main.rs"

[dependencies]
sgx-core = { path = "../sgx-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
